fixed spacing of footer on mobile

--- a/src/styles/modules/core.less
+++ b/src/styles/modules/core.less
@@ -116,6 +116,9 @@ a {
         }
     }
 
+    &.section:last-of-type {
+        padding-bottom: 10em;
+    }
 }
 
 .section {
